Bug 88950 - iPhone battery level doesn't work when plugged after UPower is started
Summary: iPhone battery level doesn't work when plugged after UPower is started
Status: RESOLVED FIXED
Alias: None
Product: upower
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-03 18:32 UTC by Bastien Nocera
Modified: 2015-02-03 22:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Bastien Nocera 2015-02-03 18:32:33 UTC
We're too quick, and when:
        /* Connect to the device */
        if (idevice_new (&dev, uuid) != IDEVICE_E_SUCCESS) {
is called, libimobiledevice tells us usbmuxd doesn't know that device yet.

Adding a sleep() works-around the problem, but we should be postponing the rest of the function instead.
Comment 1 Bastien Nocera 2015-02-03 22:08:57 UTC
commit e37fcd1db10c1c1df619a5cb290678687481347e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Feb 3 21:27:32 2015 +0100

    linux: Defer getting iDevice info until ready
    
    We're a bit too fast for usbmuxd to have noticed the USB device getting
    plugged in, so defer until either the device is 1) noticed by usbmuxd
    and 2) paired.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=88950


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.